--- a/special-pages/pages/new-tab/app/customizer/components/Customizer.module.css
+++ b/special-pages/pages/new-tab/app/customizer/components/Customizer.module.css
@@ -21,8 +21,8 @@
 
 /** todo: is this a re-usable button, yet? */
 .customizeButton {
-    background-color: transparent;
-    border: 1px solid var(--color-black-at-9);
+    background-color: var(--ntp-surface-background-color);
+    border: 1px solid var(--ntp-surface-border-color);
     border-radius: var(--border-radius-sm);
     padding: var(--sp-2) var(--sp-3);
     cursor: pointer;
