--- a/special-pages/pages/new-tab/app/customizer/components/CustomizerDrawerInner.module.css
+++ b/special-pages/pages/new-tab/app/customizer/components/CustomizerDrawerInner.module.css
@@ -3,20 +3,48 @@
     animation-fill-mode: forwards;
     animation-timing-function: ease-in-out;
     animation-duration: .1s;
-    padding-block: 1rem;
-    display: grid;
-    grid-auto-rows: max-content;
-    grid-row-gap: var(--sp-4);
     font-size: var(--small-label-font-size);
     line-height: var(--small-label-line-height);
     font-weight: var(--small-label-font-weight);
 }
 
+.sections {
+    display: grid;
+    grid-auto-rows: max-content;
+    grid-row-gap: var(--sp-9);
+}
+
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
+.internal {
+    padding-top: 1rem;
+    padding-left: 1rem;
+    padding-right: calc(1rem - var(--ntp-drawer-scroll-width));
+}
+
+.closeBtn {
+    width: 24px;
+    height: 24px;
+    position: relative;
+
+    color: var(--color-black-at-84);
+    background-color: var(--color-black-at-9);
+    &:hover {
+        background-color: var(--color-black-at-18);
+    }
+
+    [data-theme="dark"] & {
+        color: var(--color-white-at-84);
+        background-color: var(--color-white-at-9);
+        &:hover {
+            background-color: var(--color-white-at-18);
+        }
+    }
+}
 .backBtn {
     background: none;
     border: none;
@@ -41,6 +69,10 @@
 .section {
     width: 100%;
 }
+.borderedSection {
+    border-top: 1px solid var(--ntp-surface-border-color);
+    padding-top: calc(18 * var(--px-in-rem))
+}
 .sectionBody {
     margin-top: 16px;
 }
@@ -55,9 +87,10 @@
     grid-template-rows: max-content max-content;
     grid-gap: 12px;
 }
+
 .bgListItem {
     display: grid;
-    grid-row-gap: 6px;
+    grid-row-gap: 4px;
     white-space: nowrap;
     position: relative;
 
@@ -69,39 +102,50 @@
 }
 .bgPanel {
     display: grid;
-    aspect-ratio: 16/10;
+    aspect-ratio: 16/10.6;
     border-radius: 4px;
     align-items: center;
     justify-content: center;
     border: none;
     outline: none;
+    box-shadow: 0 0 0 1px var(--ntp-surface-border-color) inset;
 
     &[aria-checked="true"] {
-        outline: 3px solid var(--ntp-color-primary);
+        outline: 2px solid var(--ntp-color-primary);
         outline-offset: 2px;
     }
     &:focus-visible {
-        outline: 3px solid var(--ntp-focus-outline-color);
+        outline: 2px solid var(--ntp-focus-outline-color);
         outline-offset: 2px;
     }
+
     &:active {
         opacity: .9;
     }
 }
 
 .bgPanelEmpty {
-    border: 1px solid var(--ntp-surface-border-color);
     background-color: rgba(0, 0, 0, 0.03);
     [data-theme=dark] & {
         background-color: rgba(255, 255, 255, 0.06);
     }
 }
 
-.bgPanelOutlined {
-    border: 1px solid var(--ntp-surface-border-color);
-    background-color: transparent;
-}
 .dynamicIconColor {
+    &[data-color-mode="light"] {
+        color: black;
+        svg path {
+            fill-opacity: 0.6;
+        }
+    }
+    &[data-color-mode="dark"] {
+        color: white;
+        svg path {
+            fill-opacity: 0.6;
+        }
+    }
+}
+.dynamicPickerIconColor {
     &[data-color-mode="light"] {
         color: black;
         svg path {
@@ -124,34 +168,6 @@
         pointer-events: none;
     }
 }
-.themeList {
-
-    display: flex;
-    gap: 18px;
-}
-.themeItem {
-    display: grid;
-    justify-items: center;
-    grid-row-gap: 6px;
-}
-.themeButton {
-    display: block;
-    width: 42px;
-    height: 42px;
-    border-radius: 50%;
-    border: 1px solid #0000001F;
-    &[aria-checked="true"] {
-        outline: 3px solid var(--ntp-color-primary);
-        outline-offset: 2px;
-    }
-    &:focus-visible {
-        outline: 3px solid var(--ntp-focus-outline-color);
-        outline-offset: 2px;
-    }
-    &:active {
-        opacity: .9;
-    }
-}
 
 @keyframes fade-in {
     0% {
@@ -170,4 +186,77 @@
     position: absolute;
     top: 4px;
     right: 4px;
+
+    &[data-color-mode="light"] {
+        background-color: var(--color-black-at-60);
+        color: white;
+        &:hover {
+            background-color: black;
+        }
+    }
+
+    &[data-color-mode="dark"] {
+        background-color: var(--color-white-at-60);
+        color: black;
+        &:hover {
+            background-color: white;
+        }
+    }
+
+    &:focus-visible {
+        opacity: 1;
+    }
+}
+
+.colwrap {
+    width: 100%;
+    overflow: hidden;
+}
+.cols {
+    display: flex;
+    transition: transform .3s ease-in-out;
+    > * {
+        flex-shrink: 0;
+        width: 100%;
+    }
+    &:not([data-sub=home]) {
+        transform: translateX(-100%);
+        .col1 {
+            opacity: 0;
+            visibility: hidden;
+        }
+    }
+    &[data-sub=home] {
+        .col2 {
+            opacity: 0;
+            visibility: hidden;
+        }
+    }
+}
+.col {
+    padding: 1rem;
+    padding-right: calc(1rem - var(--ntp-drawer-scroll-width));
+    padding-top: 24px;
+    opacity: 1;
+    visibility: visible;
+    transition: opacity .3s linear, visibility .3s linear;
+}
+
+.col1 {}
+.col2 {}
+
+.settingsLink {
+    display: flex;
+    font-size: 13px;
+    justify-content: space-between;
+    align-items: center;
+    text-decoration: none;
+    color: var(--ntp-color-primary);
+
+    &:focus {
+        outline: none;
+    }
+    &:focus-visible {
+        text-decoration: underline;
+    }
 }
