--- a/special-pages/pages/special-error/app/components/AdvancedInfo.module.css
+++ b/special-pages/pages/special-error/app/components/AdvancedInfo.module.css
@@ -49,14 +49,6 @@
 
 /* Platform-specific styles */
 
-/* macOS */
-[data-platform-name="macos"] {
-    & .container {
-        background: var(--advanced-info-bg);
-        box-shadow: inset 0 1px 0 0 var(--border-color);
-    }
-}
-
 /* iOS */
 [data-platform-name="ios"] {
     & .wrapper {
@@ -88,5 +80,21 @@
         font-weight: 400;
         letter-spacing: calc(-0.31 * var(--px-in-rem));
         line-height: calc(21 * var(--px-in-rem));
+    }
+}
+
+/* macOS */
+[data-platform-name="macos"] {
+    & .container {
+        background: var(--advanced-info-bg);
+        box-shadow: inset 0 1px 0 0 var(--border-color);
+    }
+}
+
+/* windows */
+[data-platform-name="windows"] {
+    & .container {
+        background: var(--advanced-info-bg);
+        box-shadow: inset 0 1px 0 0 var(--border-color);
     }
 }
