--- a/special-pages/shared/components/Button/Button.module.css
+++ b/special-pages/shared/components/Button/Button.module.css
@@ -229,7 +229,8 @@ body:not([data-platform-name]) {
         border-radius: var(--border-radius-sm);
         height: var(--sp-8);
         border-width: 0;
-        padding-inline: var(--sp-3);
+        padding-left: var(--sp-3);
+        padding-right: var(--sp-3);
 
         &:focus-visible {
             outline: none;
