--- a/special-pages/pages/new-tab/app/customizer/components/CustomizerDrawerInner.module.css
+++ b/special-pages/pages/new-tab/app/customizer/components/CustomizerDrawerInner.module.css
@@ -102,7 +102,8 @@
 }
 .bgPanel {
     display: grid;
-    aspect-ratio: 16/10.6;
+    width: 100%;
+    height: 4rem;
     border-radius: 4px;
     align-items: center;
     justify-content: center;
