--- a/special-pages/pages/new-tab/app/customizer/components/CustomizerDrawerInner.module.css
+++ b/special-pages/pages/new-tab/app/customizer/components/CustomizerDrawerInner.module.css
@@ -102,7 +102,8 @@
 }
 .bgPanel {
     display: grid;
-    aspect-ratio: 16/10.6;
+    width: 100%;
+    height: 4rem;
     border-radius: 4px;
     align-items: center;
     justify-content: center;
@@ -111,12 +112,11 @@
     box-shadow: 0 0 0 1px var(--ntp-surface-border-color) inset;
 
     &[aria-checked="true"] {
-        outline: 2px solid var(--ntp-color-primary);
-        outline-offset: 2px;
+        box-shadow: var(--focus-ring-primary);
     }
+
     &:focus-visible {
-        outline: 2px solid var(--ntp-focus-outline-color);
-        outline-offset: 2px;
+        box-shadow: var(--focus-ring-primary);
     }
 
     &:active {
