--- a/special-pages/pages/new-tab/app/components/BackgroundReceiver.module.css
+++ b/special-pages/pages/new-tab/app/components/BackgroundReceiver.module.css
@@ -7,14 +7,20 @@
     object-fit: cover;
     pointer-events: none;
 
-    &[data-animate="true"] {
-        transition: background .3s;
+    &[data-state="loadingFirst"] {
+        animation-name: fade-in;
+        animation-fill-mode: both;
+        animation-duration: .25s;
+        animation-iteration-count: 1;
     }
 }
 
-.under {
-    opacity: 1;
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
-.over {
-    opacity: 0;
-}
+
