--- a/special-pages/pages/new-tab/app/favorites/components/Tile.module.css
+++ b/special-pages/pages/new-tab/app/favorites/components/Tile.module.css
@@ -38,6 +38,14 @@
     border-radius: var(--border-radius-lg);
 }
 
+.preview {
+    color: var(--ntp-text-normal);
+    transform: scale(0.8);
+    img {
+        opacity: 0.8;
+    }
+}
+
 .draggable {
     backdrop-filter: blur(48px);
     background: var(--ntp-surface-background-color);
@@ -83,24 +91,23 @@
     background-repeat: no-repeat;
     background-size: contain;
     pointer-events: none;
+}
 
-    &[data-loaded][data-did-try-fallback] {
-        border-radius: var(--border-radius-md);
-        height: calc(32 * var(--px-in-rem));
-        width: calc(32 * var(--px-in-rem));
+.faviconText {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: lowercase;
+    color: white;
+    font-size: 1.1rem;
+    font-weight: 600;
+    border-radius: var(--border-radius-md);
+    height: calc(32 * var(--px-in-rem));
+    width: calc(32 * var(--px-in-rem));
+
+    span:first-child {
+        text-transform: uppercase;
     }
-
-    /*&[data-state="loading favicon-src"] {*/
-    /*    outline: 1px solid blue;*/
-    /*}*/
-
-    /*&[data-state="did load favicon-src"] {*/
-    /*    outline: 1px solid green;*/
-    /*}*/
-
-    /*&[data-state="did load fallback"] {*/
-    /*    outline: 1px dotted orange;*/
-    /*}*/
 }
 
 .text {
