ntp: privacy stats ship review feedback

--- a/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
+++ b/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
@@ -189,6 +189,7 @@
 .name {
     font-size: var(--title-3-em-font-size);
     font-weight: var(--title-3-em-font-weight);
+    line-height: var(--title-3-em-line-height);
     text-overflow: ellipsis;
     display: block;
     overflow: hidden;
