ntp: fix regression with theme context/text color

--- a/special-pages/pages/new-tab/app/components/App.module.css
+++ b/special-pages/pages/new-tab/app/components/App.module.css
@@ -52,7 +52,9 @@ body[data-animate-background="true"] {
     color: var(--ntp-text-normal);
 }
 
-
+.themeContext {
+    color: var(--ntp-text-normal);
+}
 
 .mainLayout {
     will-change: transform;
