chore: Add link styles, hook up msgs

--- a/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
+++ b/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
@@ -69,6 +69,7 @@
         /* appearance: none; */
         cursor: pointer;
         text-decoration: underline;
+        color: var(--theme-text-link-color);
     }
 
     [data-theme='dark'] & {
