Black background on Duck Player

--- a/special-pages/pages/duckplayer/app/components/Button.module.css
+++ b/special-pages/pages/duckplayer/app/components/Button.module.css
@@ -9,11 +9,16 @@
     padding: 0 20px;
     flex-shrink: 0;
     box-shadow: none;
-    background: rgba(255, 255, 255, 0.12);
+    background: rgba(255, 255, 255, 0.18);
     border-radius: var(--inner-radius);
     color: rgba(255, 255, 255, 1);
     text-decoration: none;
+
+    [data-layout="mobile"] & {
+        background-color: #2f2f2f;
+    }
 }
+
 
 .button:hover, .button:focus-visible {
     cursor: pointer;
