Line-break element

--- a/special-pages/pages/special-error/app/components/Warning.module.css
+++ b/special-pages/pages/special-error/app/components/Warning.module.css
@@ -119,4 +119,10 @@
     & .phishing .icon, & .malware .icon {
         background-image: url(../../../../shared/assets/img/icons/Malware-Site-96.svg);
     }
+
+    /* Inserts line break before an inline element. Used for the Learn More link in the Warning text */
+    & [data-line-break]::before {
+        content: ' ';
+        display: block;
+    }
 }
