--- a/special-pages/pages/new-tab/app/activity/components/Activity.module.css
+++ b/special-pages/pages/new-tab/app/activity/components/Activity.module.css
@@ -152,6 +152,12 @@
     }
 }
 
+.disableWhenBusy {
+    [data-busy="true"] & {
+        cursor: not-allowed;
+    }
+}
+
 .body {
     padding-left: calc(var(--favicon-width) + var(--heading-gap));
     padding-right: calc(var(--favicon-width) + var(--heading-gap) * 2);
