--- a/special-pages/pages/new-tab/app/components/App.module.css
+++ b/special-pages/pages/new-tab/app/components/App.module.css
@@ -15,6 +15,8 @@ body {
     padding-bottom: var(--sp-16);
     margin-left: auto;
     margin-right: auto;
+    /* prevent the scrollbar affecting the width */
+    padding-left: calc(100vw - 100%);
 }
 
 body:has([data-reset-layout="true"]) .tube {
