--- a/special-pages/pages/special-error/app/components/App.module.css
+++ b/special-pages/pages/special-error/app/components/App.module.css
@@ -14,6 +14,17 @@ body {
     top: 0;
     left: 0;
 
+    /*  */
+    &::after {
+        content: ' ';
+        width: 1px;
+        height: 100%;
+        background: red;
+        position: absolute;
+        top: 0;
+        left: 50%;
+    }
+    /*  */
 
     @media (max-height: 400px) {
         padding-top: var(--sp-10);
