--- a/special-pages/pages/special-error/app/components/Warning.module.css
+++ b/special-pages/pages/special-error/app/components/Warning.module.css
@@ -140,4 +140,13 @@
             white-space: normal;
         }
     }
+
+    /* Forces a line break in the title on smaller screens */
+    & .title {
+        white-space: pre-line;
+
+        @media (min-width: 600px) {
+            white-space: normal;
+        }
+    }
 }
