--- a/special-pages/pages/special-error/app/components/Warning.module.css
+++ b/special-pages/pages/special-error/app/components/Warning.module.css
@@ -87,6 +87,7 @@
 
     & .content {
         text-align: center;
+        white-space: pre-line; /* Preserve line breaks on all screen sizes */
     }
 
     & .buttonContainer {
@@ -117,12 +118,26 @@
     }
 
     & .phishing .icon, & .malware .icon {
-        background-image: url(../../../../shared/assets/img/icons/Malware-Site-96.svg);
+        background-image: url(../../../../shared/assets/img/icons/Malware-Site-128.svg);
     }
 
-    /* Inserts line break before an inline element. Used for the Learn More link in the Warning text */
-    & [data-line-break]::before {
-        content: ' ';
-        display: block;
+    /* Preserves line breaks on smaller screens to avoid orfan words.
+       This is a fallback for browsers that don't support text-wrap: balance */
+    & .title {
+        white-space: pre-line;
+
+        @media (min-width: 600px) {
+            white-space: normal;
+        }
+    }
+}
+
+@supports (text-wrap: balance) {
+    /* Balanced line breaks on title for browsers that support it */
+    [data-platform-name="ios"] {
+        & .title {
+            text-wrap: balance;
+            white-space: normal;
+        }
     }
 }
